--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7eb365">  <td>21/12/07 13:08:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceAddToSite.ADDPLACE()[pri:0, instance:pojoMaps.PlaceAddToSite@1613674b]">ADDPLACE</td> 
+<tr bgcolor="7eb365">  <td>22/01/09 22:23:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="addPlaceWithFilesRead.addPlace()[pri:0, instance:Demo.addPlaceWithFilesRead@1613674b]">addPlace</td> 
   <td>main@656479172</td>   <td></td> </tr>
 </table>
